--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
+:root {
+    --azul-ind: #0C70F2;
+    --preto-ind: #303030;
+    --cinza-hover: #c9c9c9;
+
+    --font-padrao: 'Inter'
+}
 body {
     margin: 0px;
     padding: 0px;
+    background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 30.91%, rgba(12, 112, 242, 0) 42.84%)#303030;
+        background-repeat: no-repeat;
 }
-
+/* Menu navegação Principal */
 #principal {
     width: 100%;
     height: 100%;
-    border: 1px solid black;
-    background-color: #303030;
+    background-color: var(--preto-ind);
     padding-top: 10px;
     padding-bottom: 10px;
     display: flex;
@@ -25,7 +33,7 @@ body {
 }
 
 #principal div a {
-    font-family: 'Inter';
+    font-family: var(--font-padrao);
     font-size: 15px;
     font-weight: 600;
     color: white;
@@ -34,19 +42,120 @@ body {
 }
 
 #principal div a:hover {
-    color: #cccccc;
+    color: var(--cinza-hover);
 }
 
 #principal button {
     margin-right: 5%;
-    background-color: #0C70F2;
+    background-color: var(--azul-ind);
     border: 0px;
     height: 30px;
     width: 70px;
-    font-family: 'Inter';
+font-family: var(--font-padrao);
     font-size: 15px;
     font-weight: 600;
     color: white;
+
     box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
     cursor: pointer;
 }
+ /* Seção Principal do site */
+
+ section {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+
+     margin-top: 100px;
+     margin-bottom: 100px;
+
+ }
+
+ header {
+     color: white;
+     font-family: var(--font-padrao);
+ }
+
+ header h1 {
+     text-transform: uppercase;
+     font-size: 70px;
+     font-weight: 700;
+     text-align: center;
+
+     margin-bottom: 20px;
+ }
+
+ header h2 {
+     text-align: center;
+     font-size: 40px;
+     font-weight: 600;
+
+     margin: 100px;
+ }
+
+ header .invert {
+     background-color: black;
+     font-weight: bold;
+     padding: 5px;
+ }
+
+ /* Formulário */
+
+ form {
+     color: white;
+     font-family: var(--font-padrao);
+     font-size: 30px;
+     font-weight: 500;
+     width: 600px;
+     margin-top: 100px;
+ }
+
+ .form-group {
+     display: flex;
+     flex-direction: column;
+     margin-top: 10px;
+     margin-bottom: 10px;
+ }
+
+ form input {
+     border-radius: 10px;
+     height: 30px;
+     border: 0px;
+     font-size: 20px;
+     padding: 10px;
+     background-color: rgb(255, 255, 255, 0.9);
+ }
+
+ form label {
+     margin: 10px 0px 10px 0px;
+ }
+
+ form input::placeholder {
+     color: rgb(57, 57, 57, 0.5);
+ }
+
+ .checkbox-itens label {
+     font-size: 25px;
+ }
+
+ .checkbox-itens {
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+ }
+
+ input[type="checkbox"] {
+     transform: scale(1.9);
+ }
+
+ input[type="submit"] {
+     width: 100%;
+     height: 56px;
+     color: white;
+     font-size: 32px;
+     margin-top: 100px;
+     background-color: rgba(12, 112, 242, 0.9);
+     box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+     cursor: pointer;
+ }
