--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
 :root {
-    --azul-ind: #0C70F2;
+    --azul-ind: #0c70f2;
     --preto-ind: #303030;
     --cinza-hover: #c9c9c9;
 
-    --font-padrao: 'Inter'
+    --font-padrao: "Inter";
 }
+
 body {
     margin: 0px;
     padding: 0px;
-    background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 30.91%, rgba(12, 112, 242, 0) 42.84%)#303030;
+    background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 30.91%, rgba(12, 112, 242, 0) 42.84%) #303030;
         background-repeat: no-repeat;
 }
+
 /* Menu navegação Principal */
 #principal {
     width: 100%;
     height: 100%;
     background-color: var(--preto-ind);
-    padding-top: 10px;
-    padding-bottom: 10px;
     display: flex;
+    padding-top: 15px;
+        padding-bottom: 15px;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #bababa;
@@ -34,11 +36,10 @@ body {
 
 #principal div a {
     font-family: var(--font-padrao);
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 600;
     color: white;
     text-decoration: none;
-
 }
 
 #principal div a:hover {
@@ -49,113 +50,250 @@ body {
     margin-right: 5%;
     background-color: var(--azul-ind);
     border: 0px;
-    height: 30px;
-    width: 70px;
-font-family: var(--font-padrao);
-    font-size: 15px;
+    height: 40px;
+        width: 80px;
+        font-family: var(--font-padrao);
+    font-size: 20px;
     font-weight: 600;
     color: white;
+    border-radius: 5px;
 
     box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
     cursor: pointer;
 }
- /* Seção Principal do site */
 
- section {
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
+/* Seção Principal do site */
 
-     margin-top: 100px;
-     margin-bottom: 100px;
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
- }
+    margin-top: 100px;
+        margin-bottom: 100px;
+}
 
- header {
-     color: white;
-     font-family: var(--font-padrao);
- }
+header {
+    color: white;
+    font-family: var(--font-padrao);
+}
 
- header h1 {
-     text-transform: uppercase;
-     font-size: 70px;
-     font-weight: 700;
-     text-align: center;
+header h1 {
+    text-transform: uppercase;
+    font-size: 70px;
+    font-weight: 700;
+    text-align: center;
 
-     margin-bottom: 20px;
- }
+    margin-bottom: 20px;
+    }
 
- header h2 {
-     text-align: center;
-     font-size: 40px;
-     font-weight: 600;
+header h2 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 600;
 
-     margin: 100px;
- }
+    margin: 100px;
+    }
 
- header .invert {
-     background-color: black;
-     font-weight: bold;
-     padding: 5px;
- }
+header .invert {
+    background-color: black;
+    font-weight: bold;
+    padding: 5px;
+}
 
- /* Formulário */
+/* Formulário */
 
- form {
-     color: white;
-     font-family: var(--font-padrao);
-     font-size: 30px;
-     font-weight: 500;
-     width: 600px;
-     margin-top: 100px;
- }
+form {
+    color: white;
+    font-family: var(--font-padrao);
+    font-size: 30px;
+    font-weight: 500;
+    width: 600px;
+    margin-top: 100px;
+}
 
- .form-group {
-     display: flex;
-     flex-direction: column;
-     margin-top: 10px;
-     margin-bottom: 10px;
- }
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
- form input {
-     border-radius: 10px;
-     height: 30px;
-     border: 0px;
-     font-size: 20px;
-     padding: 10px;
-     background-color: rgb(255, 255, 255, 0.9);
- }
+form input {
+    border-radius: 10px;
+    height: 30px;
+    border: 0px;
+    font-size: 20px;
+    padding: 10px;
+    background-color: rgb(255, 255, 255, 0.9);
+}
 
- form label {
-     margin: 10px 0px 10px 0px;
- }
+form label {
+    margin: 10px 0px 10px 0px;
+}
 
- form input::placeholder {
-     color: rgb(57, 57, 57, 0.5);
- }
+form input::placeholder {
+    color: rgb(57, 57, 57, 0.5);
+}
 
- .checkbox-itens label {
-     font-size: 25px;
- }
+.checkbox-itens label {
+    font-size: 25px;
+}
 
- .checkbox-itens {
-     display: flex;
-     justify-content: space-around;
-     align-items: center;
- }
+.checkbox-itens {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
- input[type="checkbox"] {
-     transform: scale(1.9);
- }
+input[type="checkbox"] {
+    transform: scale(1.9);
+}
 
- input[type="submit"] {
-     width: 100%;
-     height: 56px;
-     color: white;
-     font-size: 32px;
-     margin-top: 100px;
-     background-color: rgba(12, 112, 242, 0.9);
-     box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
-     cursor: pointer;
- }
+input[type="submit"] {
+    width: 100%;
+    height: 56px;
+    color: white;
+    font-size: 32px;
+    margin-top: 100px;
+    background-color: rgba(12, 112, 242, 0.9);
+    box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+    cursor: pointer;
+}
+/* footer */
+footer {
+    width: 100%;
+    background-color: var(--azul-ind);
+}
+
+footer .linha1 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    font-size: 25px;
+}
+
+footer nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 400px;
+}
+
+footer h5 {
+    text-align: center;
+    color: white;
+    font-weight: 800;
+    font-size: 25px;
+    font-family: var(--font-padrao);
+    background-color: var(--preto-ind);
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 15px;
+}
+
+footer ul li {
+    text-align: center;
+    color: white;
+    font-weight: 600;
+    font-size: 25px;
+    font-family: var(--font-padrao);
+    margin: 20px 0px 20px 0px;
+}
+
+footer ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+footer ul li a:hover {
+    color: var(--cinza-hover);
+}
+
+footer .endereco {
+    width: 20%;
+    font-weight: 600;
+    font-family: var(--font-padrao);
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    padding-top: 100px;
+}
+
+footer .linha2 {
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    margin: 0px;
+    padding: 0px;
+}
+
+footer .linha2 a {
+    font-family: var(--font-padrao);
+    font-size: 25px;
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+}
+
+footer .linha2 a:first-child {
+    border-right: 3px solid white;
+}
+
+footer .linha2 a:hover {
+    color: var(--cinza-hover);
+}
+
+@media only screen and (max-width: 600px) {
+
+    /* Menu */
+    #principal {
+        flex-direction: column;
+        height: auto;
+    }
+
+    #menu {
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+    }
+
+    #menu a {
+        display: flex;
+        align-items: center;
+        height: 50px;
+    }
+
+    #principal button {
+        width: 100%;
+        margin: 0px;
+
+    }
+
+    /* Section */
+    section h1 {
+        font-size: 35px;
+    }
+
+    section h2 {
+        font-size: 25px;
+        padding: 5px;
+    }
+
+    form {
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-itens label {
+        font-size: 17px;
+    }
+}
